--- a/action.yaml
+++ b/action.yaml
@@ -17,7 +17,7 @@ inputs:
   openai_model:
     description: "GPT-3 model name."
     required: false
-    default: "gpt-3.5-turbo"
+    default: "gpt-4o"
   openai_temperature:
     description: "Sampling temperature, [0, 1]. Higher values mean the model will take more risks when generating answers."
     required: false
