--- a/action.yaml
+++ b/action.yaml
@@ -15,9 +15,9 @@ inputs:
     required: false
     default: "*"
   openai_model:
-    description: "GPT-4 model name."
+    description: "GPT-5 model name."
     required: false
-    default: "gpt-4o-mini"
+    default: "gpt-5-nano"
   openai_temperature:
     description: "Sampling temperature, [0, 1]. Higher values mean the model will take more risks when generating answers."
     required: false
