--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,8 @@
 name: "PR ChatGPT Review"
 description: "Automatically generate GitHub PR review comments by sending contents of changed files to OpenAI ChatGPT engine."
+branding:
+  icon: "check-circle"
+  color: "blue"
 inputs:
   openai_api_key:
     description: "OpenAI API Key"
